--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "grammy": "^1.30.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "random-js": "^2.1.0"
   }
 }
